Override object properties to mock with monkey-patching in javascript

--- a/packages/js-mocking-fundamentals/package.json
+++ b/packages/js-mocking-fundamentals/package.json
@@ -1,4 +1,12 @@
 {
   "name": "js-mocking-fundamentals",
-  "private": true
+  "private": true,
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "create-jest-runner": "^0.5.3",
+    "jest": "^24.9.0"
+  }
 }
