Install and run jest

--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -2,13 +2,14 @@
   "name": "jest-cypress-react-babel-webpack",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "postbuild": "cp ./public/index.html ./dist/index.html",
     "start": "serve --no-clipboard --single --listen 8080 dist",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|css|html|md)\"",
     "lint": "eslint --ignore-path .gitignore .",
-    "validate": "npm run lint && npm run build",
+    "validate": "npm run lint && npm run test && npm run build",
     "setup": "npm install && npm run validate"
   },
   "devDependencies": {
@@ -23,6 +24,7 @@
     "eslint": "^6.7.1",
     "eslint-config-kentcdodds": "^14.6.1",
     "file-loader": "^5.0.2",
+    "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "serve": "^11.2.0",
