--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -25,6 +25,7 @@
     "eslint": "^6.7.1",
     "eslint-config-kentcdodds": "^14.6.1",
     "file-loader": "^5.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
