--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.7.1",
     "eslint-config-kentcdodds": "^14.6.1",
+    "eslint-import-resolver-jest": "^3.0.0",
     "file-loader": "^5.0.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
@@ -40,6 +41,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "emotion-theming": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
