--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "dev": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "postbuild": "cp ./public/index.html ./dist/index.html",
