--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -41,6 +41,7 @@
     "jest-emotion": "^10.0.27",
     "jest-runner-eslint": "^0.7.5",
     "jest-watch-select-projects": "^2.0.0",
+    "jest-watch-typeahead": "^0.4.2",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "serve": "^11.2.0",
