Run only relevant jest tests on git commit to avoid breakages

--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -20,6 +20,18 @@
       "ignorePath": "./.gitignore"
     }
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run build"
+    }
+  },
+  "lint-staged": {
+    "**/*.+(js|json|css|html|md)": [
+      "prettier",
+      "jest --findRelatedTests",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.7.4",
     "@babel/plugin-transform-runtime": "^7.7.4",
@@ -35,6 +47,7 @@
     "eslint-config-kentcdodds": "^14.6.1",
     "eslint-import-resolver-jest": "^3.0.0",
     "file-loader": "^5.0.2",
+    "husky": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
     "is-ci-cli": "^2.0.0",
     "jest": "^24.9.0",
@@ -42,6 +55,7 @@
     "jest-runner-eslint": "^0.7.5",
     "jest-watch-select-projects": "^2.0.0",
     "jest-watch-typeahead": "^0.4.2",
+    "lint-staged": "^10.0.4",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "serve": "^11.2.0",
