--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -6,13 +6,19 @@
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
-    "dev": "webpack-dev-server --mode=development",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:server": "node server",
+    "dev:client": "webpack-dev-server --mode=development",
     "build": "webpack --mode=production",
     "postbuild": "cp ./public/index.html ./dist/index.html",
-    "start": "serve --no-clipboard --single --listen 8080 dist",
+    "start": "npm-run-all --parallel start:*",
+    "start:server": "node server",
+    "start:client": "serve --no-clipboard --single --listen 8080 dist",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json|css|html|md)\"",
     "lint": "jest --config test/jest.lint.js",
-    "validate": "npm run test && npm run build",
+    "validate": "npm run test:coverage",
+    "postinstall": "cd server && npm install",
+    "netlify": "npm-run-all --parallel test:coverage build && cp -r coverage/lcov-report dist/lcov-report",
     "setup": "npm install && npm run validate"
   },
   "jest-runner-eslint": {
@@ -22,7 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm run build"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
@@ -42,6 +48,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "css-loader": "^3.2.0",
     "eslint": "^6.7.1",
     "eslint-config-kentcdodds": "^14.6.1",
@@ -56,10 +63,12 @@
     "jest-watch-select-projects": "^2.0.0",
     "jest-watch-typeahead": "^0.4.2",
     "lint-staged": "^10.0.4",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "serve": "^11.2.0",
     "style-loader": "^1.0.0",
+    "test-data-bot": "^0.8.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
@@ -67,6 +76,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "@reach/router": "^1.2.1",
+    "axios": "^0.19.0",
     "emotion-theming": "^10.0.27",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
