--- a/packages/jest-cypress-react-babel-webpack/package.json
+++ b/packages/jest-cypress-react-babel-webpack/package.json
@@ -50,9 +50,11 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "css-loader": "^3.2.0",
+    "cypress": "^4.1.0",
     "eslint": "^6.7.1",
     "eslint-config-kentcdodds": "^14.6.1",
     "eslint-import-resolver-jest": "^3.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "file-loader": "^5.0.2",
     "husky": "^4.2.1",
     "identity-obj-proxy": "^3.0.0",
